--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "mongoose": "^5.4.13",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "webpack": "^4.29.4",
+    "webpack-cli": "^3.2.3"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2",
+    "dev:asset": "webpack"
   },
   "devDependencies": {
     "eslint": "^5.14.0",
