--- a/package.json
+++ b/package.json
@@ -6,22 +6,31 @@
   "dependencies": {
     "@babel/core": "^7.1.5",
     "@babel/node": "^7.0.0",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.1.5",
+    "autoprefixer": "^9.4.7",
+    "babel-loader": "^8.0.5",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.15.1",
     "mongoose": "^5.4.13",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2",
-    "dev:asset": "webpack"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss'",
+    "dev:asset": "WEBPACK_ENV=development webpack -w",
+    "build:asset": "WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
     "eslint": "^5.14.0",
